fixed overflow on x axis

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -10,12 +10,13 @@ body {
     margin: 0;
     color: #000;
     line-height: 1.6;
+    overflow-x: hidden;
 }
 
 #showcase {
     margin: 0;
     padding: 0;
-    width: 100%;
+    width: 100vw;
     height: 70vh;
     position: relative;
     overflow-y: hidden;
@@ -56,7 +57,7 @@ button {
 }
 
 .container {
-    max-width: 1180px;
+    max-width: 100vw;
     text-align: center;
     margin: 0 auto;
     padding: 0 3rem;
@@ -102,6 +103,7 @@ button {
 .section-img-main {
     margin-top: 3rem;
 }
+
 .section-img-main img{
     width: 100vw;
     height: 600px;
@@ -154,7 +156,7 @@ button {
 }
 
 .service-container{
-    width: 100%;
+    width: 100vh;
     margin: 15px 15px 15px 0;
     padding: 10px 10px 10px 0;
 }
